@@ -308,8 +308,13 @@ Db.prototype.collections = function(callback) {
 /**
   Evaluate javascript on the server
 **/
-Db.prototype.eval = function(code, parameters, callback) {
-  if(typeof parameters === "function") { callback = parameters; parameters = null; }
+Db.prototype.eval = function(code, parameters, options, callback) {
+  // Unpack calls
+  var args = Array.prototype.slice.call(arguments, 1);
+  callback = args.pop();
+  parameters = args.length ? args.shift() : parameters;
+  options = args.length ? args.shift() : {};
+
   var finalCode = code;
   var finalParameters = [];
   // If not a code object translate to one
@@ -325,8 +330,12 @@ Db.prototype.eval = function(code, parameters, callback) {
   }
   // Create execution selector
   var selector = {'$eval':finalCode, 'args':finalParameters};
+  // Check if the nolock parameter is passed in
+  if(options['nolock']) {
+    selector['nolock'] = options['nolock'];
+  }
   // Iterate through all the fields of the index
-  new Cursor(this, new Collection(this, DbCommand.SYSTEM_COMMAND_COLLECTION), selector, {}, 0, -1).nextObject(function(err, result) {
+  new Cursor(this, new Collection(this, DbCommand.SYSTEM_COMMAND_COLLECTION), selector, options, 0, -1).nextObject(function(err, result) {
     if(err != null) return callback(err, null);
 
     if(result.ok == 1) {
@@ -617,17 +626,20 @@ Db.prototype.ensureIndex = function(collectionName, fieldOrSpec, options, callba
 
     if(!collectionInfo[index_name])  {
       self._executeInsertCommand(command, {read:false, safe:true}, function(err, result) {
-        if(err != null) return callback(err, null);
+        // Only callback if we have one specified
+        if(typeof callback === 'function') {
+          if(err != null) return callback(err, null);
 
-        result = result && result.documents;
-        if (result[0].err) {
-          callback(self.wrap(result[0]));
-        } else {
-          callback(null, command.documents[0].name);
-        }      
+          result = result && result.documents;
+          if (result[0].err) {
+            callback(self.wrap(result[0]));
+          } else {
+            callback(null, command.documents[0].name);
+          }      
+        }
       });      
     } else {
-      return callback(null, index_name);      
+      if(typeof callback === 'function') return callback(null, index_name);      
     }
   });
 };
